# moviesort

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md
gui/: CMakeLists.txt
gui/forms/: addmovie.ui  browsemovies.ui  mainapp.ui  mainmenu.ui  moviematch.ui
gui/include/: AddMoviePane.h  AddMoviePanel.h  BrowseMoviesModel.h  BrowseMoviesPanel.h  MainApp.h  MainMenu.h  MovieListModel.h  MovieListPane.h  MovieMatchPanel.h  utils.h
gui/include/interfaces/: BackendAdapter.h  IMatch.h  IMovieInfo.h  IMovieMgmt.h
gui/src/: AddMoviePane.cpp  AddMoviePanel.cpp  BrowseMoviesModel.cpp  BrowseMoviesPanel.cpp  MainApp.cpp  MainMenu.cpp  MovieListModel.cpp  MovieListPane.cpp  MovieMatchPanel.cpp  test.cpp  utils.cpp
libmoviesort/: CMakeLists.txt
libmoviesort/include/: MovieDatabase.h
libmoviesort/include/MovieSort/: MovieDatabase.h
libmoviesort/include/private/: EloCalculator.h  Match.h  MovieDatabase.h
libmoviesort/include/private/MovieSort/: EloCalculator.h
libmoviesort/include/public/MovieSort/: Backend.h  Exceptions.h  IMatch.h  IMovieInfo.h  Match.h  MatchResult.h  Movie.h  MovieDatabase.h
libmoviesort/src/: Backend.cpp  EloCalculator.cpp  Match.cpp  MovieDatabase.cpp
libmoviesort/tests/: TestEloCalculator.cpp
